src/php-src/language-parser.output
Terminals unused in grammar

   DONE_EVAL


State 301 conflicts: 2 shift/reduce
State 412 conflicts: 2 shift/reduce
State 466 conflicts: 1 shift/reduce
State 604 conflicts: 1 shift/reduce


Grammar

    0 $accept: statement_list $end

    1 statement_list: statement_list statement
    2               | %empty

    3 statement: '{' statement_list '}'

    4 $@1: %empty

    5 statement: IF '(' expr ')' $@1 statement elseif_list else_single

    6 $@2: %empty

    7 $@3: %empty

    8 statement: IF '(' expr ')' ':' $@2 statement_list new_elseif_list new_else_single $@3 ENDIF ';'

    9 $@4: %empty

   10 $@5: %empty

   11 statement: WHILE '(' expr ')' $@4 while_statement $@5 while_iterations

   12 $@6: %empty

   13 $@7: %empty

   14 $@8: %empty

   15 statement: DO $@6 statement WHILE $@7 '(' expr ')' ';' $@8 do_while_iterations

   16 $@9: %empty

   17 $@10: %empty

   18 $@11: %empty

   19 $@12: %empty

   20 $@13: %empty

   21 statement: FOR $@9 '(' for_expr $@10 ';' for_expr $@11 ';' for_expr $@12 ')' for_statement $@13 for_iterations

   22 $@14: %empty

   23 statement: SWITCH '(' expr ')' $@14 switch_case_list
   24          | BREAK ';'
   25          | BREAK expr ';'
   26          | CONTINUE ';'
   27          | CONTINUE expr ';'

   28 $@15: %empty

   29 statement: OLD_FUNCTION STRING $@15 parameter_list '(' statement_list ')' ';'

   30 $@16: %empty

   31 statement: FUNCTION STRING '(' $@16 parameter_list ')' '{' statement_list '}'

   32 $@17: %empty

   33 statement: IC_FUNCTION STRING $@17 '(' parameter_list ')' '{' statement_list '}'
   34          | RETURN ';'
   35          | RETURN expr ';'
   36          | PHP_GLOBAL global_var_list
   37          | PHP_STATIC static_var_list

   38 $@18: %empty

   39 statement: CLASS STRING $@18 '{' class_statement_list '}'

   40 $@19: %empty

   41 statement: CLASS STRING EXTENDS STRING $@19 '{' class_statement_list '}'
   42          | PHP_ECHO echo_expr_list ';'
   43          | INLINE_HTML
   44          | expr ';'

   45 $@20: %empty

   46 statement: REQUIRE $@20 expr ';'
   47          | HIGHLIGHT_FILE expr ';'
   48          | HIGHLIGHT_STRING '(' expr ')' ';'
   49          | HIGHLIGHT_STRING '(' expr ',' expr ')' ';'
   50          | EVAL '(' expr ')' ';'
   51          | INCLUDE expr ';'
   52          | ';'

   53 for_statement: statement
   54              | ':' statement_list ENDFOR ';'

   55 switch_case_list: '{' case_list '}'
   56                 | '{' ';' case_list '}'
   57                 | ':' case_list ENDSWITCH ';'
   58                 | ':' ';' case_list ENDSWITCH ';'

   59 while_statement: statement
   60                | ':' statement_list ENDWHILE ';'

   61 while_iterations: %empty

   62 $@21: %empty

   63 while_iterations: while_iterations CONTINUED_WHILE '(' expr ')' $@21 while_statement

   64 do_while_iterations: %empty

   65 $@22: %empty

   66 $@23: %empty

   67 do_while_iterations: do_while_iterations CONTINUED_DOWHILE $@22 statement WHILE $@23 '(' expr ')' ';'

   68 for_iterations: %empty

   69 $@24: %empty

   70 $@25: %empty

   71 $@26: %empty

   72 $@27: %empty

   73 for_iterations: for_iterations CONTINUED_FOR $@24 '(' for_expr $@25 ';' for_expr $@26 ';' for_expr $@27 ')' for_statement

   74 elseif_list: %empty

   75 $@28: %empty

   76 $@29: %empty

   77 $@30: %empty

   78 elseif_list: elseif_list ELSEIF '(' $@28 expr $@29 ')' $@30 statement

   79 new_elseif_list: %empty

   80 $@31: %empty

   81 @32: %empty

   82 $@33: %empty

   83 new_elseif_list: new_elseif_list ELSEIF '(' $@31 expr @32 ')' ':' $@33 statement_list

   84 else_single: %empty

   85 $@34: %empty

   86 else_single: ELSE $@34 statement

   87 new_else_single: %empty

   88 $@35: %empty

   89 new_else_single: ELSE ':' $@35 statement_list

   90 case_list: %empty

   91 $@36: %empty

   92 $@37: %empty

   93 case_list: CASE expr ':' $@36 statement_list $@37 case_list

   94 $@38: %empty

   95 case_list: DEFAULT ':' $@38 statement_list

   96 $@39: %empty

   97 $@40: %empty

   98 case_list: CASE expr ';' $@39 statement_list $@40 case_list

   99 $@41: %empty

  100 case_list: DEFAULT ';' $@41 statement_list

  101 $@42: %empty

  102 parameter_list: $@42 non_empty_parameter_list
  103               | %empty

  104 non_empty_parameter_list: '$' varname_scalar
  105                         | '&' '$' varname_scalar
  106                         | PHP_CONST '$' varname_scalar
  107                         | '$' varname_scalar '=' signed_scalar
  108                         | non_empty_parameter_list ',' '$' varname_scalar
  109                         | non_empty_parameter_list ',' '&' '$' varname_scalar
  110                         | non_empty_parameter_list ',' PHP_CONST '$' varname_scalar
  111                         | non_empty_parameter_list ',' '$' varname_scalar '=' signed_scalar

  112 function_call_parameter_list: non_empty_function_call_parameter_list
  113                             | %empty

  114 non_empty_function_call_parameter_list: expr_without_variable
  115                                       | assignment_variable_pointer
  116                                       | '&' assignment_variable_pointer
  117                                       | non_empty_function_call_parameter_list ',' expr_without_variable
  118                                       | non_empty_function_call_parameter_list ',' assignment_variable_pointer
  119                                       | non_empty_function_call_parameter_list ',' '&' assignment_variable_pointer

  120 global_var_list: global_var_list ',' '$' var
  121                | '$' var

  122 static_var_list: static_var_list ',' '$' var
  123                | static_var_list ',' '$' var '=' unambiguous_static_assignment
  124                | '$' var
  125                | '$' var '=' unambiguous_static_assignment

  126 unambiguous_static_assignment: signed_scalar
  127                              | '(' expr ')'

  128 class_statement_list: class_statement_list class_statement
  129                     | %empty

  130 class_statement: VAR class_variable_declaration ';'

  131 $@43: %empty

  132 class_statement: OLD_FUNCTION STRING $@43 parameter_list '(' statement_list ')' ';'

  133 $@44: %empty

  134 class_statement: FUNCTION STRING '(' $@44 parameter_list ')' '{' statement_list '}'

  135 class_variable_declaration: class_variable_declaration ',' '$' varname_scalar
  136                           | class_variable_declaration ',' '$' varname_scalar '=' expr
  137                           | '$' varname_scalar
  138                           | '$' varname_scalar '=' expr

  139 echo_expr_list: %empty
  140               | echo_expr_list ',' expr
  141               | expr

  142 for_expr: %empty
  143         | for_expr ',' expr
  144         | expr

  145 expr_without_variable: PHP_LIST '(' assignment_list ')' '=' expr
  146                      | assignment_variable_pointer '=' expr
  147                      | assignment_variable_pointer PLUS_EQUAL expr
  148                      | assignment_variable_pointer MINUS_EQUAL expr
  149                      | assignment_variable_pointer MUL_EQUAL expr
  150                      | assignment_variable_pointer DIV_EQUAL expr
  151                      | assignment_variable_pointer CONCAT_EQUAL expr
  152                      | assignment_variable_pointer MOD_EQUAL expr
  153                      | assignment_variable_pointer AND_EQUAL expr
  154                      | assignment_variable_pointer OR_EQUAL expr
  155                      | assignment_variable_pointer XOR_EQUAL expr
  156                      | assignment_variable_pointer SHIFT_LEFT_EQUAL expr
  157                      | assignment_variable_pointer SHIFT_RIGHT_EQUAL expr
  158                      | assignment_variable_pointer INCREMENT
  159                      | INCREMENT assignment_variable_pointer
  160                      | assignment_variable_pointer DECREMENT
  161                      | DECREMENT assignment_variable_pointer

  162 $@45: %empty

  163 expr_without_variable: expr BOOLEAN_OR $@45 expr

  164 $@46: %empty

  165 expr_without_variable: expr BOOLEAN_AND $@46 expr

  166 $@47: %empty

  167 expr_without_variable: expr LOGICAL_OR $@47 expr

  168 $@48: %empty

  169 expr_without_variable: expr LOGICAL_AND $@48 expr
  170                      | expr LOGICAL_XOR expr
  171                      | expr '|' expr
  172                      | expr '^' expr
  173                      | expr '&' expr
  174                      | expr '.' expr
  175                      | expr '+' expr
  176                      | expr '-' expr
  177                      | expr '*' expr
  178                      | expr '/' expr
  179                      | expr '%' expr
  180                      | expr SHIFT_LEFT expr
  181                      | expr SHIFT_RIGHT expr
  182                      | '+' expr
  183                      | '-' expr
  184                      | '!' expr
  185                      | '~' expr
  186                      | expr IS_EQUAL expr
  187                      | expr IS_NOT_EQUAL expr
  188                      | expr '<' expr
  189                      | expr IS_SMALLER_OR_EQUAL expr
  190                      | expr '>' expr
  191                      | expr IS_GREATER_OR_EQUAL expr
  192                      | '(' expr ')'
  193                      | '(' expr error

  194 $@49: %empty

  195 $@50: %empty

  196 expr_without_variable: expr '?' $@49 expr ':' $@50 expr

  197 $@51: %empty

  198 $@52: %empty

  199 expr_without_variable: var $@51 '(' function_call_parameter_list ')' $@52 possible_function_call
  200                      | internal_functions_in_yacc

  201 $@53: %empty

  202 $@54: %empty

  203 expr_without_variable: '$' unambiguous_class_name PHP_CLASS_OPERATOR var $@53 '(' function_call_parameter_list ')' $@54 possible_function_call
  204                      | NEW var

  205 @55: %empty

  206 $@56: %empty

  207 $@57: %empty

  208 expr_without_variable: NEW var @55 '(' $@56 function_call_parameter_list ')' $@57 possible_function_call
  209                      | INT_CAST expr
  210                      | DOUBLE_CAST expr
  211                      | STRING_CAST expr
  212                      | ARRAY_CAST expr
  213                      | OBJECT_CAST expr
  214                      | EXIT
  215                      | EXIT '(' ')'
  216                      | EXIT '(' expr ')'

  217 $@58: %empty

  218 expr_without_variable: '@' $@58 expr
  219                      | '@' error
  220                      | scalar
  221                      | PHP_ARRAY '(' array_pair_list ')'
  222                      | '`' encaps_list '`'
  223                      | PHP_PRINT expr

  224 scalar: LNUMBER
  225       | DNUMBER
  226       | '"' encaps_list '"'
  227       | '\'' encaps_list '\''
  228       | STRING_CONSTANT
  229       | STRING
  230       | PHP_LINE
  231       | PHP_FILE

  232 signed_scalar: scalar
  233              | '+' signed_scalar
  234              | '-' signed_scalar

  235 varname_scalar: STRING

  236 expr: assignment_variable_pointer
  237     | expr_without_variable

  238 unambiguous_variable_name: var
  239                          | '{' expr '}'

  240 unambiguous_array_name: varname_scalar
  241                       | '{' expr '}'

  242 unambiguous_class_name: unambiguous_class_name PHP_CLASS_OPERATOR varname_scalar
  243                       | multi_dimensional_array
  244                       | varname_scalar

  245 assignment_list: assignment_list ',' assignment_variable_pointer
  246                | assignment_variable_pointer
  247                | assignment_list ','
  248                | %empty

  249 assignment_variable_pointer: '$' unambiguous_variable_name
  250                            | '$' multi_dimensional_array
  251                            | '$' unambiguous_class_name PHP_CLASS_OPERATOR unambiguous_variable_name

  252 $@59: %empty

  253 assignment_variable_pointer: '$' unambiguous_class_name PHP_CLASS_OPERATOR unambiguous_array_name '[' $@59 dimensions

  254 var: '$' unambiguous_variable_name
  255    | varname_scalar
  256    | '$' multi_dimensional_array

  257 $@60: %empty

  258 multi_dimensional_array: unambiguous_array_name '[' $@60 dimensions

  259 dimensions: dimensions '[' expr ']'
  260           | dimensions '[' ']'

  261 @61: %empty

  262 dimensions: @61 ']'

  263 @62: %empty

  264 dimensions: @62 expr ']'

  265 array_pair_list: %empty
  266                | non_empty_array_pair_list

  267 non_empty_array_pair_list: non_empty_array_pair_list ',' expr PHP_DOUBLE_ARROW expr
  268                          | non_empty_array_pair_list ',' expr
  269                          | expr PHP_DOUBLE_ARROW expr
  270                          | expr

  271 encaps_list: encaps_list '$' STRING
  272            | encaps_list '$' STRING '[' STRING ']'
  273            | encaps_list '$' STRING '[' NUM_STRING ']'
  274            | encaps_list '$' STRING '[' '$' STRING ']'
  275            | encaps_list '$' STRING PHP_CLASS_OPERATOR STRING
  276            | encaps_list '$' '{' STRING '}'
  277            | encaps_list '$' '{' STRING '[' STRING ']' '}'
  278            | encaps_list '$' '{' STRING '[' NUM_STRING ']' '}'
  279            | encaps_list '$' '{' STRING '[' '$' STRING ']' '}'
  280            | encaps_list '$' '{' STRING PHP_CLASS_OPERATOR STRING '}'
  281            | encaps_list '$' '{' '$' STRING '}'
  282            | encaps_list STRING
  283            | encaps_list NUM_STRING
  284            | encaps_list ENCAPSED_AND_WHITESPACE
  285            | encaps_list CHARACTER
  286            | encaps_list BAD_CHARACTER
  287            | encaps_list '['
  288            | encaps_list ']'
  289            | encaps_list '{'
  290            | encaps_list '}'
  291            | encaps_list PHP_CLASS_OPERATOR
  292            | %empty

  293 internal_functions_in_yacc: PHP_UNSET '(' assignment_variable_pointer ')'
  294                           | PHP_ISSET '(' assignment_variable_pointer ')'
  295                           | PHP_EMPTY '(' assignment_variable_pointer ')'

  296 possible_function_call: %empty
  297                       | OLD_FUNCTION STRING parameter_list '(' statement_list ')' ';'
  298                       | FUNCTION STRING '(' parameter_list ')' '{' statement_list '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 184
'"' (34) 226
'$' (36) 104 105 106 107 108 109 110 111 120 121 122 123 124 125 135
    136 137 138 203 249 250 251 253 254 256 271 272 273 274 275 276
    277 278 279 280 281
'%' (37) 179
'&' (38) 105 109 116 119 173
'\'' (39) 227
'(' (40) 5 8 11 15 21 23 29 31 33 48 49 50 63 67 73 78 83 127 132 134
    145 192 193 199 203 208 215 216 221 293 294 295 297 298
')' (41) 5 8 11 15 21 23 29 31 33 48 49 50 63 67 73 78 83 127 132 134
    145 192 199 203 208 215 216 221 293 294 295 297 298
'*' (42) 177
'+' (43) 175 182 233
',' (44) 49 108 109 110 111 117 118 119 120 122 123 135 136 140 143
    245 247 267 268
'-' (45) 176 183 234
'.' (46) 174
'/' (47) 178
':' (58) 8 54 57 58 60 83 89 93 95 196
';' (59) 8 15 21 24 25 26 27 29 34 35 42 44 46 47 48 49 50 51 52 54
    56 57 58 60 67 73 98 100 130 132 297
'<' (60) 188
'=' (61) 107 111 123 125 136 138 145 146
'>' (62) 190
'?' (63) 196
'@' (64) 218 219
'[' (91) 253 258 259 260 272 273 274 277 278 279 287
']' (93) 259 260 262 264 272 273 274 277 278 279 288
'^' (94) 172
'`' (96) 222
'{' (123) 3 31 33 39 41 55 56 134 239 241 276 277 278 279 280 281 289
    298
'|' (124) 171
'}' (125) 3 31 33 39 41 55 56 134 239 241 276 277 278 279 280 281 290
    298
'~' (126) 185
error (256) 193 219
LOGICAL_OR (258) 167
LOGICAL_XOR (259) 170
LOGICAL_AND (260) 169
PHP_PRINT (261) 223
PLUS_EQUAL (262) 147
MINUS_EQUAL (263) 148
MUL_EQUAL (264) 149
DIV_EQUAL (265) 150
CONCAT_EQUAL (266) 151
MOD_EQUAL (267) 152
AND_EQUAL (268) 153
OR_EQUAL (269) 154
XOR_EQUAL (270) 155
SHIFT_LEFT_EQUAL (271) 156
SHIFT_RIGHT_EQUAL (272) 157
BOOLEAN_OR (273) 163
BOOLEAN_AND (274) 165
IS_EQUAL (275) 186
IS_NOT_EQUAL (276) 187
IS_SMALLER_OR_EQUAL (277) 189
IS_GREATER_OR_EQUAL (278) 191
SHIFT_LEFT (279) 180
SHIFT_RIGHT (280) 181
INCREMENT (281) 158 159
DECREMENT (282) 160 161
INT_CAST (283) 209
DOUBLE_CAST (284) 210
STRING_CAST (285) 211
ARRAY_CAST (286) 212
OBJECT_CAST (287) 213
NEW (288) 204 208
EXIT (289) 214 215 216
IF (290) 5 8
ELSEIF (291) 78 83
ELSE (292) 86 89
ENDIF (293) 8
LNUMBER (294) 224
DNUMBER (295) 225
STRING (296) 29 31 33 39 41 132 134 229 235 271 272 273 274 275 276
    277 278 279 280 281 282 297 298
NUM_STRING (297) 273 278 283
INLINE_HTML (298) 43
CHARACTER (299) 285
BAD_CHARACTER (300) 286
ENCAPSED_AND_WHITESPACE (301) 284
PHP_ECHO (302) 42
DO (303) 15
WHILE (304) 11 15 67
ENDWHILE (305) 60
FOR (306) 21
ENDFOR (307) 54
SWITCH (308) 23
ENDSWITCH (309) 57 58
CASE (310) 93 98
DEFAULT (311) 95 100
BREAK (312) 24 25
CONTINUE (313) 26 27
CONTINUED_WHILE (314) 63
CONTINUED_DOWHILE (315) 67
CONTINUED_FOR (316) 73
OLD_FUNCTION (317) 29 132 297
FUNCTION (318) 31 134 298
IC_FUNCTION (319) 33
PHP_CONST (320) 106 110
RETURN (321) 34 35
INCLUDE (322) 51
REQUIRE (323) 46
HIGHLIGHT_FILE (324) 47
HIGHLIGHT_STRING (325) 48 49
PHP_GLOBAL (326) 36
PHP_STATIC (327) 37
PHP_UNSET (328) 293
PHP_ISSET (329) 294
PHP_EMPTY (330) 295
CLASS (331) 39 41
EXTENDS (332) 41
PHP_CLASS_OPERATOR (333) 203 242 251 253 275 280 291
PHP_DOUBLE_ARROW (334) 267 269
PHP_LIST (335) 145
PHP_ARRAY (336) 221
VAR (337) 130
EVAL (338) 50
DONE_EVAL (339)
PHP_LINE (340) 230
PHP_FILE (341) 231
STRING_CONSTANT (342) 228


Nonterminals, with rules where they appear

$accept (117)
    on left: 0
statement_list (118)
    on left: 1 2, on right: 0 1 3 8 29 31 33 54 60 83 89 93 95 98 100
    132 134 297 298
statement (119)
    on left: 3 5 8 11 15 21 23 24 25 26 27 29 31 33 34 35 36 37 39
    41 42 43 44 46 47 48 49 50 51 52, on right: 1 5 15 53 59 67 78
    86
$@1 (120)
    on left: 4, on right: 5
$@2 (121)
    on left: 6, on right: 8
$@3 (122)
    on left: 7, on right: 8
$@4 (123)
    on left: 9, on right: 11
$@5 (124)
    on left: 10, on right: 11
$@6 (125)
    on left: 12, on right: 15
$@7 (126)
    on left: 13, on right: 15
$@8 (127)
    on left: 14, on right: 15
$@9 (128)
    on left: 16, on right: 21
$@10 (129)
    on left: 17, on right: 21
$@11 (130)
    on left: 18, on right: 21
$@12 (131)
    on left: 19, on right: 21
$@13 (132)
    on left: 20, on right: 21
$@14 (133)
    on left: 22, on right: 23
$@15 (134)
    on left: 28, on right: 29
$@16 (135)
    on left: 30, on right: 31
$@17 (136)
    on left: 32, on right: 33
$@18 (137)
    on left: 38, on right: 39
$@19 (138)
    on left: 40, on right: 41
$@20 (139)
    on left: 45, on right: 46
for_statement (140)
    on left: 53 54, on right: 21 73
switch_case_list (141)
    on left: 55 56 57 58, on right: 23
while_statement (142)
    on left: 59 60, on right: 11 63
while_iterations (143)
    on left: 61 63, on right: 11 63
$@21 (144)
    on left: 62, on right: 63
do_while_iterations (145)
    on left: 64 67, on right: 15 67
$@22 (146)
    on left: 65, on right: 67
$@23 (147)
    on left: 66, on right: 67
for_iterations (148)
    on left: 68 73, on right: 21 73
$@24 (149)
    on left: 69, on right: 73
$@25 (150)
    on left: 70, on right: 73
$@26 (151)
    on left: 71, on right: 73
$@27 (152)
    on left: 72, on right: 73
elseif_list (153)
    on left: 74 78, on right: 5 78
$@28 (154)
    on left: 75, on right: 78
$@29 (155)
    on left: 76, on right: 78
$@30 (156)
    on left: 77, on right: 78
new_elseif_list (157)
    on left: 79 83, on right: 8 83
$@31 (158)
    on left: 80, on right: 83
@32 (159)
    on left: 81, on right: 83
$@33 (160)
    on left: 82, on right: 83
else_single (161)
    on left: 84 86, on right: 5
$@34 (162)
    on left: 85, on right: 86
new_else_single (163)
    on left: 87 89, on right: 8
$@35 (164)
    on left: 88, on right: 89
case_list (165)
    on left: 90 93 95 98 100, on right: 55 56 57 58 93 98
$@36 (166)
    on left: 91, on right: 93
$@37 (167)
    on left: 92, on right: 93
$@38 (168)
    on left: 94, on right: 95
$@39 (169)
    on left: 96, on right: 98
$@40 (170)
    on left: 97, on right: 98
$@41 (171)
    on left: 99, on right: 100
parameter_list (172)
    on left: 102 103, on right: 29 31 33 132 134 297 298
$@42 (173)
    on left: 101, on right: 102
non_empty_parameter_list (174)
    on left: 104 105 106 107 108 109 110 111, on right: 102 108 109
    110 111
function_call_parameter_list (175)
    on left: 112 113, on right: 199 203 208
non_empty_function_call_parameter_list (176)
    on left: 114 115 116 117 118 119, on right: 112 117 118 119
global_var_list (177)
    on left: 120 121, on right: 36 120
static_var_list (178)
    on left: 122 123 124 125, on right: 37 122 123
unambiguous_static_assignment (179)
    on left: 126 127, on right: 123 125
class_statement_list (180)
    on left: 128 129, on right: 39 41 128
class_statement (181)
    on left: 130 132 134, on right: 128
$@43 (182)
    on left: 131, on right: 132
$@44 (183)
    on left: 133, on right: 134
class_variable_declaration (184)
    on left: 135 136 137 138, on right: 130 135 136
echo_expr_list (185)
    on left: 139 140 141, on right: 42 140
for_expr (186)
    on left: 142 143 144, on right: 21 73 143
expr_without_variable (187)
    on left: 145 146 147 148 149 150 151 152 153 154 155 156 157 158
    159 160 161 163 165 167 169 170 171 172 173 174 175 176 177 178
    179 180 181 182 183 184 185 186 187 188 189 190 191 192 193 196
    199 200 203 204 208 209 210 211 212 213 214 215 216 218 219 220
    221 222 223, on right: 114 117 237
$@45 (188)
    on left: 162, on right: 163
$@46 (189)
    on left: 164, on right: 165
$@47 (190)
    on left: 166, on right: 167
$@48 (191)
    on left: 168, on right: 169
$@49 (192)
    on left: 194, on right: 196
$@50 (193)
    on left: 195, on right: 196
$@51 (194)
    on left: 197, on right: 199
$@52 (195)
    on left: 198, on right: 199
$@53 (196)
    on left: 201, on right: 203
$@54 (197)
    on left: 202, on right: 203
@55 (198)
    on left: 205, on right: 208
$@56 (199)
    on left: 206, on right: 208
$@57 (200)
    on left: 207, on right: 208
$@58 (201)
    on left: 217, on right: 218
scalar (202)
    on left: 224 225 226 227 228 229 230 231, on right: 220 232
signed_scalar (203)
    on left: 232 233 234, on right: 107 111 126 233 234
varname_scalar (204)
    on left: 235, on right: 104 105 106 107 108 109 110 111 135 136
    137 138 240 242 244 255
expr (205)
    on left: 236 237, on right: 5 8 11 15 23 25 27 35 44 46 47 48 49
    50 51 63 67 78 83 93 98 127 136 138 140 141 143 144 145 146 147
    148 149 150 151 152 153 154 155 156 157 163 165 167 169 170 171
    172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187
    188 189 190 191 192 193 196 209 210 211 212 213 216 218 223 239
    241 259 264 267 268 269 270
unambiguous_variable_name (206)
    on left: 238 239, on right: 249 251 254
unambiguous_array_name (207)
    on left: 240 241, on right: 253 258
unambiguous_class_name (208)
    on left: 242 243 244, on right: 203 242 251 253
assignment_list (209)
    on left: 245 246 247 248, on right: 145 245 247
assignment_variable_pointer (210)
    on left: 249 250 251 253, on right: 115 116 118 119 146 147 148
    149 150 151 152 153 154 155 156 157 158 159 160 161 236 245 246
    293 294 295
$@59 (211)
    on left: 252, on right: 253
var (212)
    on left: 254 255 256, on right: 120 121 122 123 124 125 199 203
    204 208 238
multi_dimensional_array (213)
    on left: 258, on right: 243 250 256
$@60 (214)
    on left: 257, on right: 258
dimensions (215)
    on left: 259 260 262 264, on right: 253 258 259 260
@61 (216)
    on left: 261, on right: 262
@62 (217)
    on left: 263, on right: 264
array_pair_list (218)
    on left: 265 266, on right: 221
non_empty_array_pair_list (219)
    on left: 267 268 269 270, on right: 266 267 268
encaps_list (220)
    on left: 271 272 273 274 275 276 277 278 279 280 281 282 283 284
    285 286 287 288 289 290 291 292, on right: 222 226 227 271 272
    273 274 275 276 277 278 279 280 281 282 283 284 285 286 287 288
    289 290 291
internal_functions_in_yacc (221)
    on left: 293 294 295, on right: 200
possible_function_call (222)
    on left: 296 297 298, on right: 199 203 208


State 0

    0 $accept: . statement_list $end

    $default  reduce using rule 2 (statement_list)

    statement_list  go to state 1


State 1

    0 $accept: statement_list . $end
    1 statement_list: statement_list . statement

    $end              shift, and go to state 2
    PHP_PRINT         shift, and go to state 3
    '+'               shift, and go to state 4
    '-'               shift, and go to state 5
    '!'               shift, and go to state 6
    '~'               shift, and go to state 7
    INCREMENT         shift, and go to state 8
    DECREMENT         shift, and go to state 9
    INT_CAST          shift, and go to state 10
    DOUBLE_CAST       shift, and go to state 11
    STRING_CAST       shift, and go to state 12
    ARRAY_CAST        shift, and go to state 13
    OBJECT_CAST       shift, and go to state 14
    '@'               shift, and go to state 15
    NEW               shift, and go to state 16
    EXIT              shift, and go to state 17
    IF                shift, and go to state 18
    LNUMBER           shift, and go to state 19
    DNUMBER           shift, and go to state 20
    STRING            shift, and go to state 21
    INLINE_HTML       shift, and go to state 22
    PHP_ECHO          shift, and go to state 23
    DO                shift, and go to state 24
    WHILE             shift, and go to state 25
    FOR               shift, and go to state 26
    SWITCH            shift, and go to state 27
    BREAK             shift, and go to state 28
    CONTINUE          shift, and go to state 29
    OLD_FUNCTION      shift, and go to state 30
    FUNCTION          shift, and go to state 31
    IC_FUNCTION       shift, and go to state 32
    RETURN            shift, and go to state 33
    INCLUDE           shift, and go to state 34
    REQUIRE           shift, and go to state 35
    HIGHLIGHT_FILE    shift, and go to state 36
    HIGHLIGHT_STRING  shift, and go to state 37
    PHP_GLOBAL        shift, and go to state 38
    PHP_STATIC        shift, and go to state 39
    PHP_UNSET         shift, and go to state 40
    PHP_ISSET         shift, and go to state 41
    PHP_EMPTY         shift, and go to state 42
    CLASS             shift, and go to state 43
    PHP_LIST          shift, and go to state 44
    PHP_ARRAY         shift, and go to state 45
    EVAL              shift, and go to state 46
    PHP_LINE          shift, and go to state 47
    PHP_FILE          shift, and go to state 48
    STRING_CONSTANT   shift, and go to state 49
    '{'               shift, and go to state 50
    '('               shift, and go to state 51
    ';'               shift, and go to state 52
    '$'               shift, and go to state 53
    '`'               shift, and go to state 54
    '"'               shift, and go to state 55
    '\''              shift, and go to state 56

    statement                    go to state 57
    expr_without_variable        go to state 58
    scalar                       go to state 59
    varname_scalar               go to state 60
    expr                         go to state 61
    assignment_variable_pointer  go to state 62
    var                          go to state 63
    internal_functions_in_yacc   go to state 64


State 2

    0 $accept: statement_list $end .

    $default  accept


State 3

  223 expr_without_variable: PHP_PRINT . expr

    PHP_PRINT        shift, and go to state 3
    '+'              shift, and go to state 4
    '-'              shift, and go to state 5
    '!'              shift, and go to state 6
    '~'              shift, and go to state 7
    INCREMENT        shift, and go to state 8
    DECREMENT        shift, and go to state 9
    INT_CAST         shift, and go to state 10
    DOUBLE_CAST      shift, and go to state 11
    STRING_CAST      shift, and go to state 12
    ARRAY_CAST       shift, and go to state 13
    OBJECT_CAST      shift, and go to state 14
    '@'              shift, and go to state 15
    NEW              shift, and go to state 16
    EXIT             shift, and go to state 17
    LNUMBER          shift, and go to state 19
    DNUMBER          shift, and go to state 20
    STRING           shift, and go to state 21
    PHP_UNSET        shift, and go to state 40
    PHP_ISSET        shift, and go to state 41
    PHP_EMPTY        shift, and go to state 42
    PHP_LIST         shift, and go to state 44
    PHP_ARRAY        shift, and go to state 45
    PHP_LINE         shift, and go to state 47
    PHP_FILE         shift, and go to state 48
    STRING_CONSTANT  shift, and go to state 49
    '('              shift, and go to state 51
    '$'              shift, and go to state 53
    '`'              shift, and go to state 54
    '"'              shift, and go to state 55
    '\''             shift, and go to state 56

    expr_without_variable        go to state 58
    scalar                       go to state 59
    varname_scalar               go to state 60
    expr                         go to state 65
    assignment_variable_pointer  go to state 62
    var                          go to state 63
    internal_functions_in_yacc   go to state 64


State 4

  182 expr_without_variable: '+' . expr

    PHP_PRINT        shift, and go to state 3
    '+'              shift, and go to state 4
    '-'              shift, and go to state 5
    '!'              shift, and go to state 6
    '~'              shift, and go to state 7
    INCREMENT        shift, and go to state 8
    DECREMENT        shift, and go to state 9
    INT_CAST         shift, and go to state 10
    DOUBLE_CAST      shift, and go to state 11
    STRING_CAST      shift, and go to state 12
    ARRAY_CAST       shift, and go to state 13
    OBJECT_CAST      shift, and go to state 14
    '@'              shift, and go to state 15
    NEW              shift, and go to state 16
    EXIT             shift, and go to state 17
    LNUMBER          shift, and go to state 19
    DNUMBER          shift, and go to state 20
    STRING           shift, and go to state 21
    PHP_UNSET        shift, and go to state 40
    PHP_ISSET        shift, and go to state 41
    PHP_EMPTY        shift, and go to state 42
    PHP_LIST         shift, and go to state 44
    PHP_ARRAY        shift, and go to state 45
    PHP_LINE         shift, and go to state 47
    PHP_FILE         shift, and go to state 48
    STRING_CONSTANT  shift, and go to state 49
    '('              shift, and go to state 51
    '$'              shift, and go to state 53
    '`'              shift, and go to state 54
    '"'              shift, and go to state 55
    '\''             shift, and go to state 56

    expr_without_variable        go to state 58
    scalar                       go to state 59
    varname_scalar               go to state 60
    expr                         go to state 66
    assignment_variable_pointer  go to state 62
    var                          go to state 63
    internal_functions_in_yacc   go to state 64


State 5

  183 expr_without_variable: '-' . expr

    PHP_PRINT        shift, and go to state 3
    '+'              shift, and go to state 4
    '-'              shift, and go to state 5
    '!'              shift, and go to state 6
    '~'              shift, and go to state 7
    INCREMENT        shift, and go to state 8
    DECREMENT        shift, and go to state 9
    INT_CAST         shift, and go to state 10
    DOUBLE_CAST      shift, and go to state 11
    STRING_CAST      shift, and go to state 12
    ARRAY_CAST       shift, and go to state 13
    OBJECT_CAST      shift, and go to state 14
    '@'              shift, and go to state 15
    NEW              shift, and go to state 16
    EXIT             shift, and go to state 17
    LNUMBER          shift, and go to state 19
    DNUMBER          shift, and go to state 20
    STRING           shift, and go to state 21
    PHP_UNSET        shift, and go to state 40
    PHP_ISSET        shift, and go to state 41
    PHP_EMPTY        shift, and go to state 42
    PHP_LIST         shift, and go to state 44
    PHP_ARRAY        shift, and go to state 45
    PHP_LINE         shift, and go to state 47
    PHP_FILE         shift, and go to state 48
    STRING_CONSTANT  shift, and go to state 49
    '('              shift, and go to state 51
    '$'              shift, and go to state 53
    '`'              shift, and go to state 54
    '"'              shift, and go to state 55
    '\''             shift, and go to state 56

    expr_without_variable        go to state 58
    scalar                       go to state 59
    varname_scalar               go to state 60
    expr                         go to state 67
    assignment_variable_pointer  go to state 62
    var                          go to state 63
    internal_functions_in_yacc   go to state 64


State 6

  184 expr_without_variable: '!' . expr
